z-index fix

--- a/src/components/MainLayout/navigation.scss
+++ b/src/components/MainLayout/navigation.scss
@@ -11,6 +11,7 @@ $_border-prop: 0.1rem solid $color-light-porcelain;
     justify-content: center;
     position: fixed;
     width: 100%;
+    z-index: $z-index-header;
 
     &__title {
         color: $color-light-porcelain;
